crates/glyph-cli/tests/corpus/invalid/flow_assign_unknown_rhs.glyph
skill diagnose(scope = ".") -> Report
    description: "Unknown RHS callee should fire one repairable diagnostic."
    flow:
        x = unknown(scope)
        return x
